--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_svg: 0.21.0-nullsafety.0
   async: ^2.5.0
 
+  provider: ^5.0.0
+
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
