--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,17 @@ dependencies:
     sdk: flutter
   flutter_svg: 0.21.0-nullsafety.0
   async: ^2.5.0
-
   provider: ^5.0.0
-
   intl: "^0.17.0"
-
   cupertino_icons: ^1.0.0
+  freezed_annotation:
+  flutter_state_notifier: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  freezed:
 
 flutter:
 
